@@ -133,7 +133,7 @@ public class TestSourceGenerator extends XMLTestCase {
         // 2. Compile the files generated by the source generator
         verbose("-->Compiling the files in " + _outputRootFile);
         try {
-            Compiler compiler = new JavaCCompiler(_outputRootFile);
+            Compiler compiler = new SunJavaCompiler(_outputRootFile);
             compiler.compileDirectory();
         } catch (CompilationException e) {
             if (!checkExceptionWasExpected(e, FailureStepType.SOURCE_COMPILATION)) {
