@@ -46,7 +46,15 @@
                 <a href="scm.html">here</a></li>
         </ul>
         
-        
+        <p><b>Note:</b>The CTF currently requires the Sun JDK (or SDK) to execute,
+           although it may be possible to execute fine with GNU gcj or with JRockit. The
+           CTF will not work if you are using only a JRE. This is because the CTF uses
+           the Sun Java compiler API to compile code as needed for Source Generator and
+           Marshaling Framework tests. The CTF code is written to allow easy extension
+           for additional compiler frameworks, so if you use a compiler or runtime that
+           is not supported, you should be able to easily add support for a new framework.
+           If you want to do this, contact Castor committors for assistance and direction
+           and they'll set you on the right course.</p>
     </section>
 
     <section title="Steps">
